--- a/src/styles.css
+++ b/src/styles.css
@@ -1,56 +1,150 @@
-*{
-    padding: 0;
-    margin: 0;
+@font-face {
+  font-family: "Handmade";
+  src: url(font/Handmade.otf);
 }
-body{
-    background-color: #fb1988;
+* {
+  padding: 0;
+  margin: 0;
+  font-family: "Handmade";
 }
-header{
-    background-color: black;
+body {
+  background-color: black;
 }
-.logo{
-    display: grid;
+header {
+  background-color: #fd017c;
 }
-.search-box{
-    display:grid ;
+.logo {
+  display: grid;
 }
-ul{
-list-style: none;
-display:grid;
-} 
-li{
-    margin: auto;
+
+ul {
+  list-style: none;
+  display: grid;
 }
-nav a{
-    text-decoration: none;
+li {
+  margin: auto;
 }
-nav{
+
+nav {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto;
+}
+.topnav {
+  overflow: hidden;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 25px;
+}
+
+.topnav a:hover {
+  background-color: #ff2f95;
+  color: black;
+}
+
+#menuToggle input {
+    display: none;
+}
+
+/** CSS PARA MOVIL**/
+@media screen and (max-width: 800px) {
+  .logo {
+    display: none;
+    float: right;
+  }
+  nav {
     display: grid;
     grid-template-columns: auto auto auto auto auto auto;
-    padding: 20px;
-}
-.index{
-    grid-row: 1/1;
-    margin: auto;
-    padding: auto;
-}
-.events{
-    grid-row: 2/1;
-    margin: auto;
-    padding: auto;
-}
-.schedule{
-    grid-row: 3/1;
-    mmargin: auto;
-    padding: auto;
-}
-.prices{
-    grid-row: 4/1;
-    margin: auto;
-    padding: auto;
-}
-#search-form{
-    grid-row: 5/1;
-    margin: auto;
-    padding: auto;
+  }
+  #menuToggle {
+    display: block;
+    position: relative;
+    margin :20px;
+    z-index: 1;
+  }
+
+  #menuToggle input {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+
+    cursor: pointer;
+
+    opacity: 0;
+    z-index: 2;
+  }
+
+  #menuToggle span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+
+    background: #cdcdcd;
+    border-radius: 3px;
+
+    z-index: 1;
+
+    transform-origin: 4px 0px;
+
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+      background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  }
+
+  #menuToggle span:first-child {
+    transform-origin: 0% 0%;
+  }
+
+  #menuToggle span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+  }
+
+  #menuToggle input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+  }
+
+  #menuToggle input:checked ~ span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+
+  #menuToggle input:checked ~ span:nth-last-child(2) {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+
+  .topnav {
+    margin-top: auto;
+    margin-bottom: auto;
+    display: none;
+  }
+  
+  .topnav a {   
+    color: black;
+    text-decoration: none;
+    font-size: 25px;
+    text-align: center;
+  }
+
+  .topnav li {
+    font-size: 22px;
+  }
+  #menuToggle input:checked ~ .topnav {
+    display: grid;
+    text-align: center;
+    width: 100vw;
+    margin-left: -20px;
+    margin-bottom: -20px;
+  }
 }
