--- a/src/styles.css
+++ b/src/styles.css
@@ -10,12 +10,12 @@
 }
 
 body {
-  background-image: url(img/fondo1.png);
+  background-image:url(img/fondo1.png);
   background-size: 300px;
   background-color: black;
 }
-
 header {
+  max-width: 100vw;
   background-color: #fd017c;
 }
 
@@ -23,19 +23,24 @@ header {
   font-size: 30px;
   margin-left: 50px;
 }
-
-.d-block{
+.carousel {
+  max-width:870px;
+  max-height:540px;
   margin: auto;
-  margin-top: 5%;
 }
 .carousel-text{
-  text-align: left;
-  padding: 30px 32px;
-  margin: auto;
+  margin-bottom: -3%;
   text-align: center;
-  text-shadow: 0px 4px 4px #000;
+  color: white;
+  text-shadow: 0px 4px 4px black;
 }
-.carousel-caption{
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.9) 60%);
-  line-height: 6rem;
+.carousel-item{
+  margin-top: 10%;
+}
+.carousel-item::before{
+  content: '';
+  background-color: rgba(0,0,0,.5);
+  width: 100%;
+  height: 100%;
+  position:absolute;
 }
