--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Handmade";
-  src: url(font/Handmade.otf);
+  src: url(../font/Handmade.otf);
 }
 
 * {
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-image:url(img/fondo1.png);
+  background-image:url(../img/fondo1.png);
   background-size: 300px;
   background-color: black;
 }
@@ -76,9 +76,22 @@ height: 500px;
   text-shadow: 0px 4px 4px #fd017c;
 }
 #events{
-  background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("img/fondo2.png");
+  background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("../img/fondo2.png");
 }
 #events p{
   margin-left: 1%;
   margin-right: 10%;
+}
+
+#prices{
+  background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("../img/fondo2.png");
+}
+.menu-img{
+  margin: 1%;
+  text-align: center;
+}
+.menu-img img{
+  min-width: auto;
+max-width: 595px;
+max-height: auto;
 }
