--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -88,12 +88,11 @@ height: 500px;
 }
 .menu-title{
   color: white;
-}
-.card{
-text-align: center;
+  margin: 1%;
 }
 .card-body{
-  background-color: white;
+color: white;
+text-shadow: 0px 4px 4px black;
 }
 .card-text{
   font-size: max(1.0vw,min(15px));
@@ -104,9 +103,19 @@ h5{
 .row{
   margin-right:0 ;
 }
-.col-md-4{
-  padding-right: 0;
-}
+
 .col-md-4 img{
   background-color: #fd017c;
+}
+.card-img-top{
+  width:100%;
+  height:auto;
+}
+.card{
+  background-color: #fd017c;
+}
+.col{
+  margin-left: 1%;
+  max-width: 30%;
+  min-width: 30%;
 }
