--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -78,11 +78,33 @@ height: 500px;
 #events{
   background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("../img/fondo2.png");
 }
+#schedule{
+  background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("../img/fondo2.png");
+}
 #events p{
   margin-left: 1%;
   margin-right: 10%;
 }
-
+#schedule p, #schedule h4{
+    margin-left: 1.5%;
+    margin-right: 10%;
+}
+.list-header{
+  text-shadow: 0px 4px 4px black;
+}
+#schedule div.horario{
+  border: 3px solid white;
+  background-color: rgba(253, 1, 124 ,0.75);
+  border-radius: 15px;
+  margin:1%;
+  padding: 0.5%;
+}
+#schedule ul{
+  list-style:none;
+}
+#schedule div.horario li{
+  text-shadow: 0px 4px 4px black;
+}
 #prices{
   background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("../img/fondo2.png");
 }
@@ -103,7 +125,9 @@ h5{
 .row{
   margin-right:0 ;
 }
-
+.col-md-4{
+  padding-right: 0;
+}
 .col-md-4 img{
   background-color: #fd017c;
 }
@@ -116,6 +140,10 @@ h5{
 }
 .col{
   margin-left: 1%;
-  max-width: 30%;
-  min-width: 30%;
+  max-width: 40%;
+  min-width: 35%;
+}
+p img{
+  max-width: 15%;
+  min-width: 50px;
 }
