--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -158,6 +158,10 @@ p img{
   background-color: rgba(253, 1, 124 ,0.75);
   margin-bottom: 3.4%;
 }
+
+label{
+  font-size: large;
+}
 footer{
   position: relative;
   bottom: 0;
